syntax = "proto3";

package spinnaker.keel.api.engine;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.keel.api.engine";

import "Asset.proto";

service PluginRegistry {
  rpc registerAssetPlugin (RegisterAssetPluginRequest) returns (RegisterAssetPluginResponse);
  rpc registerVetoPlugin (RegisterVetoPluginRequest) returns (RegisterVetoPluginResponse);
}

message RegisterAssetPluginRequest {
  string name = 1;
  string vip = 2;
  int32 port = 3;
  repeated TypeMetadata types = 4;
}

message RegisterAssetPluginResponse {
  bool succeeded = 1;
}

message RegisterVetoPluginRequest {
  string name = 1;
  string vip = 2;
  int32 port = 3;
}

message RegisterVetoPluginResponse {
  bool succeeded = 1;
}
